# supabase_fts_python

./: .gitignore  README.md  example.env  pyproject.toml
supabase/: config.toml  seed.sql
supabase/migrations/: 20240422232338_create_movies_table.sql
supabase_full_text_search/: main.py
